--- a/app/views/new/training-location.html
+++ b/app/views/new/training-location.html
@@ -9,8 +9,8 @@
         hint: {
           text: "Academic training is teaching that takes place outside of the classroom"
         },
-        idPrefix: code + "-locations",
-        name: code + "-locations",
+        idPrefix: code + "-training-location",
+        name: code + "-training-location",
         fieldset: {
           legend: {
             text: title,
