--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -1,47 +1,40 @@
 {% extends "layout.html" %}
 {% set title = "Check your answers before confirming" %}
-{% set backLink = paths.back %}
 {% set showChangeLinks = true %}
 {% set showTitleAndDescription = true %}
 {% set isNotPublished = true %}
-{% set isFe = (data[code + '-phase'] == 'Further education') %}
+{% set isFe = (data[code + "-phase"] == "Further education") %}
 
 {% block content %}
-  <form action="{{ paths.next }}" method="post">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl add-double-bottom-margin">
-          {{ title }}
-        </h1>
+  <form action="{{ paths.next }}" method="post" class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">{{ title }}</h1>
 
-        <dl class="govuk-summary-list govuk-!-margin-top-9 govuk-!-margin-bottom-9">
-          {% if isFe %}
-            {% include "new/further/_answers.html" %}
+      {% if isFe %}
+        {% include "new/further/_answers.html" %}
+      {% else %}
+        {% include "new/_answers.html" %}
+      {% endif %}
+
+      <h2 class="govuk-heading-l">Preview</h2>
+      <p>See how this course will appear when it’s published on Find postgraduate teacher training:</p>
+      <div class="govuk-inset-text">
+        <h3 class="govuk-heading-m">
+          <span class="govuk-heading-s govuk-!-margin-bottom-0">{{ data["training-provider-name"] }}</span>
+          {% if data[code + "-change-title"] == "Yes, that’s correct" or not data[code + "-change-title"] %}
+            {{ data[code + "-generated-title"] }} ({{ code }})
           {% else %}
-            {% include "new/_answers.html" %}
+            {{ data[code + "-title"] }} ({{ code }})
           {% endif %}
-        </dl>
-
-        <h2 class="govuk-heading-l">Preview</h2>
-
-        <p>See how this course will appear when it’s published on Find postgraduate teacher training:</p>
-        <div class="govuk-inset-text">
-          <h3 class="govuk-heading-m">
-            <span class="govuk-heading-s govuk-!-margin-bottom-0">{{ data['training-provider-name'] }}</span>
-            {% if data[code + '-change-title'] == 'Yes, that’s correct' or not data[code + '-change-title']  %}
-              {{ data[code + '-generated-title'] }} ({{ code }})
-            {% else %}
-              {{ data[code + '-title'] }} ({{ code }})
-            {% endif %}
-          </h3>
-          <p>Course: {{ courseOffered }}</p>
-        </div>
+        </h3>
+        <p>Course: {{ courseOffered }}</p>
       </div>
+
+      {{ govukButton({
+        text: "Save new course"
+      }) }}
+
+      <p class="govuk-body">Saving this course will not publish it.</p>
     </div>
-
-    <input type="submit" class="govuk-button" value="Save new course" />
-    <p>Saving this course will not publish it.</p>
   </form>
-
-
 {% endblock %}
